# COR-Identity

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.env  env.example  main.py  pyproject.toml  requirements.txt  sql_auth.db
alembic/: env.py
alembic/versions/: 01ee99757d3e_init.py  edd14ac624df_init.py
cor_auth/: schemas.py
cor_auth/conf/: config.py
cor_auth/database/: db.py  models.py
cor_auth/repository/: record.py  users.py
cor_auth/routes/: auth.py  record.py  users.py
cor_auth/services/: auth.py  cipher.py  email.py  gen.py  logger.py  roles.py
cor_auth/static/: cor_platform.html  forgot-password.html  login.html  signup.html  styles.css  translation.js
cor_auth/templates/: email_templates.html  example_email.html
